add header menu

--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
                   <use href="./img/sprite/sprite.svg#icon-arrow-down"></use>
                 </svg>
               </a>
+              <ul class="header-menu">
+                <li class="header-menu__item">
+                  <a class="header-menu__link" href="#">Property 1</a>
+                </li>
+                <li class="header-menu__item">
+                  <a class="header-menu__link" href="#">Property 2</a>
+                </li>
+                <li class="header-menu__item">
+                  <a class="header-menu__link" href="#">Property 3</a>
+                </li>
+              </ul>
             </li>
           </ul>
 
@@ -232,7 +243,7 @@
                   <use href="./img/sprite/sprite.svg#icon-recommen-house"></use>
                 </svg>
                 <p class="recommen-card-position__text recommen-card-position__text--blue">
-                  Popular
+                  New house
                 </p>
               </div>
               <div class="recommen-card__first-content">
@@ -250,6 +261,14 @@
             </li>
             <li class="recommen-card__item">
               <img src="./img/recommen-house3.jpg" class="recommen-card__img" alt="img" />
+              <div class="recommen-card-position recommen-card-position--green">
+                <svg class="recommen-card-position__svg">
+                  <use href="./img/sprite/sprite.svg#icon-recommen-wallet"></use>
+                </svg>
+                <p class="recommen-card-position__text recommen-card-position__text--green">
+                  Best Deals
+                </p>
+              </div>
               <div class="recommen-card__first-content">
                 <h2 class="recommen-card__title">The Old Lighthouse</h2>
                 <p class="recommen-card__price">$ 44.000.000</p>
@@ -264,6 +283,12 @@
             </li>
             <li class="recommen-card__item">
               <img src="./img/recommen-house4.jpg" class="recommen-card__img" alt="img" />
+              <div class="recommen-card-position">
+                <svg class="recommen-card-position__svg">
+                  <use href="./img/sprite/sprite.svg#icon-recommen-fire"></use>
+                </svg>
+                <p class="recommen-card-position__text">Popular</p>
+              </div>
               <div class="recommen-card__first-content">
                 <h2 class="recommen-card__title">Cosmo's House</h2>
                 <p class="recommen-card__price">$ 22.000.000</p>
