--- a/index.html
+++ b/index.html
@@ -372,22 +372,45 @@
           <div class="sell-rightblock">
             <ul class="sell-rightblock__list">
               <li class="sell-rightblock__item">
-                <img src="./img/sell-rightblock1.jpg" alt="img" />
+                <img
+                  src="./img/sell-rightblock1.jpg"
+                  class="sell-rightblock__img sell-rightblock__img--bed"
+                  alt="img"
+                />
               </li>
               <li class="sell-rightblock__item">
-                <img src="./img/sell-rightblock2.jpg" alt="img" />
+                <img
+                  src="./img/sell-rightblock2.jpg"
+                  class="sell-rightblock__img sell-rightblock__img--vase"
+                  alt="img"
+                />
               </li>
               <li class="sell-rightblock__item">
-                <img src="./img/sell-rightblock3.jpg" alt="img" />
+                <img
+                  src="./img/sell-rightblock3.jpg"
+                  class="sell-rightblock__img sell-rightblock__img--main"
+                  alt="img"
+                />
               </li>
               <li class="sell-rightblock__item">
-                <img src="./img/sell-rightblock4.jpg" alt="img" />
+                <img
+                  src="./img/sell-rightblock4.jpg"
+                  class="sell-rightblock__img sell-rightblock__img--room"
+                  alt="img"
+                />
+              </li>
+              <li class="sell-rightblock__item">
+                <a class="sell-rightblock__link" href="#">
+                  <svg class="sell-rightblock__svg" width="20" height="20">
+                    <use href="./img/sprite/sprite.svg#icon-sell-play"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-
-            <img src="./img/sell-orange.png" alt="orange" />
-            <img src="./img/sell-yellow.png" alt="yellow" />
           </div>
+
+          <img src="./img/sell-orange.png" class="sell__img sell__img--orange" alt="orange" />
+          <img src="./img/sell-yellow.png" class="sell__img sell__img--yellow" alt="yellow" />
         </div>
       </section>
 
