--- a/index.html
+++ b/index.html
@@ -422,39 +422,96 @@
 
           <ul class="review-list">
             <li class="review-list__item">
-              <img src="" class="review-list__img" alt="img" />
-              <h3 class="review-list__title">My house sold out fast!</h3>
-              <p class="review-list__text">
-                I was finally able to sell my house quickly through Hounter by immediately setting
-                me up with people who wanted my house. I also do not get a discount from the sale of
-                my house. Awesome!
-              </p>
-              <h3 class="review-list__under-title">Courtney Henry</h3>
-              <p class="review-list__under-text">CEO Andarafish</p>
+              <img src="./img/review1.png" class="review-list__img" alt="img" />
+              <div class="review-content">
+                <h3 class="review-content__title">My house sold out fast!</h3>
+                <p class="review-content__text">
+                  I was finally able to sell my house quickly through Hounter by immediately setting
+                  me up with people who wanted my house. I also do not get a discount from the sale
+                  of my house. Awesome!
+                </p>
+                <div class="review-under-content">
+                  <img
+                    src="./img/review-ellipse1.png"
+                    class="review-under-content__img"
+                    alt="portret"
+                  />
+                  <div class="review-under-content__margin">
+                    <h3 class="review-under-content__title">Courtney Henry</h3>
+                    <p class="review-under-content__text">CEO Andarafish</p>
+                  </div>
+                  <div class="review-under-content__flex">
+                    <svg class="review-under-content__svg" width="28" height="28">
+                      <use href="./img/sprite/sprite.svg#icon-review-star"></use>
+                    </svg>
+                    <span class="review-under-content__span">4.3</span>
+                  </div>
+                </div>
+              </div>
             </li>
             <li class="review-list__item">
-              <img src="" class="review-list__img" alt="img" />
-              <h3 class="review-list__title">Best! I got the house I wanted through Hounter</h3>
-              <p class="review-list__text">
-                Through this website I can get a house with the type and specifications I want very
-                easily, without a complicated process to be able to find information on the house we
-                want.
-              </p>
-              <h3 class="review-list__under-title">Dianne Russell</h3>
-              <p class="review-list__under-text">Manager Director</p>
+              <img src="./img/review2.png" class="review-list__img" alt="img" />
+              <div class="review-content">
+                <h3 class="review-content__title">
+                  Best! I got the house I wanted through Hounter
+                </h3>
+                <p class="review-content__text">
+                  Through this website I can get a house with the type and specifications I want
+                  very easily, without a complicated process to be able to find information on the
+                  house we want.
+                </p>
+                <div class="review-under-content">
+                  <img
+                    src="./img/review-ellipse2.png"
+                    class="review-under-content__img"
+                    alt="portret"
+                  />
+                  <div class="review-under-content__margin">
+                    <h3 class="review-under-content__title">Dianne Russell</h3>
+                    <p class="review-under-content__text">Manager Director</p>
+                  </div>
+                  <div class="review-under-content__flex">
+                    <svg class="review-under-content__svg" width="28" height="28">
+                      <use href="./img/sprite/sprite.svg#icon-review-star"></use>
+                    </svg>
+                    <span class="review-under-content__span">4.6</span>
+                  </div>
+                </div>
+              </div>
             </li>
             <li class="review-list__item">
-              <img src="" class="review-list__img" alt="img" />
-              <h3 class="review-list__title">Through the Hounter, I can get a house for my self</h3>
-              <p class="review-list__text">
-                By looking for information about what kind of house we want, we managed to get the
-                house we wanted very quickly, and directly connected with the seller to be able to
-                ask about the details, very helpful!
-              </p>
-              <h3 class="review-list__under-title">Esther Howard</h3>
-              <p class="review-list__under-text">Head of Marketing</p>
+              <img src="./img/review3.png" class="review-list__img" alt="img" />
+              <div class="review-content">
+                <h3 class="review-content__title">
+                  Through the Hounter, I can get a house for my self
+                </h3>
+                <p class="review-content__text">
+                  By looking for information about what kind of house we want, we managed to get the
+                  house we wanted very quickly, and directly connected with the seller to be able to
+                  ask about the details, very helpful!
+                </p>
+                <div class="review-under-content">
+                  <img
+                    src="./img/review-ellipse3.png"
+                    class="review-under-content__img"
+                    alt="portret"
+                  />
+                  <div class="review-under-content__margin">
+                    <h3 class="review-under-content__title">Esther Howard</h3>
+                    <p class="review-under-content__text">Head of Marketing</p>
+                  </div>
+                  <div class="review-under-content__flex">
+                    <svg class="review-under-content__svg" width="28" height="28">
+                      <use href="./img/sprite/sprite.svg#icon-review-star"></use>
+                    </svg>
+                    <span class="review-under-content__span">4.6</span>
+                  </div>
+                </div>
+              </div>
             </li>
           </ul>
+
+          <span class="review__span"></span>
         </div>
       </section>
     </main>
