add start partner section

--- a/index.html
+++ b/index.html
@@ -514,6 +514,82 @@
           <span class="review__span"></span>
         </div>
       </section>
+
+      <section class="partner">
+        <div class="container">
+          <div class="partner__content">
+            <p class="partner__text">See tips and trick from our partnership</p>
+            <h2 class="partner__title">
+              Find out more about <br />
+              selling and buying homes
+            </h2>
+            <button class="partner__btn" type="button">More Artikel</button>
+          </div>
+
+          <div class="partner-leftblock">
+            <ul class="partner-list">
+              <li class="partner-list__item">
+                <div class="partner-content">
+                  <div>
+                    <img class="partner-content__img" src="./img/partner1.png" alt="png" />
+                  </div>
+                  <div class="parnter-content__flex">
+                    <div class="partner-content__flex-name">
+                      <img
+                        class="partner-content__img"
+                        src="./img/partner-ellipse1.png"
+                        alt="png"
+                      />
+                      <p class="partner-content__text">Dianne Russell</p>
+                    </div>
+                    <h3 class="partner-content__title">
+                      The things we need to check when we want to buy a house
+                    </h3>
+                    <div class="partner-content__time">
+                      <svg class="partner-content__svg" width="24" height="24">
+                        <use href="./img/sprite/sprite.svg#icon-partner-clock"></use>
+                      </svg>
+                      <p class="partner-content__text-time">4 min read | 25 Apr 2021</p>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="partner-list__item">
+                <img src="./img/partner2.png" alt="png" />
+                <img src="./img/partner-ellipse2.png" alt="png" />
+                <p>Courtney Henry</p>
+                <h3>7 Ways to distinguish the quality of the house we want to buy</h3>
+                <svg>
+                  <use href=""></use>
+                </svg>
+                <p>6 min read | 24 Apr 2021</p>
+              </li>
+              <li class="partner-list__item">
+                <img src="./img/partner3.png" alt="png" />
+                <img src="./img/partner-ellipse3.png" alt="png" />
+                <p>Darlene Robertson</p>
+                <h3>The best way to know the quality of the house we want to buy</h3>
+                <svg>
+                  <use href=""></use>
+                </svg>
+                <p>2 min read | 24 Apr 2021</p>
+              </li>
+            </ul>
+          </div>
+
+          <div class="partner-rightblock">
+            <img src="./img/partner4.png" alt="png" />
+            <img src="./img/partner-ellipse4.png" alt="png" />
+            <p>Cameron Williamson</p>
+            <h3>12 Things to know before buying a house</h3>
+            <p>
+              Want to buy a house but are unsure about what we should know, here I will try to
+              explain what we should know and check when we want to buy a house
+            </p>
+            <p>8 min read | 25 Apr 2021</p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="./js/header-menu.js" type="module"></script>
